feat: harvest Escape OSSR software